Add packages endpoint to projects controller #87
